# SynCode

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  README.md  rust-toolchain.toml
crates/syncode-ast/: Cargo.toml
crates/syncode-ast/src/: lib.rs
crates/syncode-cli/: Cargo.toml
crates/syncode-cli/src/: main.rs
crates/syncode-core/: Cargo.toml
crates/syncode-core/src/: agent.rs  background.rs  compaction.rs  context.rs  file_state.rs  fs_scope.rs  lib.rs  pathutil.rs  permission.rs  prompt.rs  registry.rs  session.rs  state.rs  tool.rs
crates/syncode-llm/: Cargo.toml
crates/syncode-llm/src/: client.rs  context.rs  error.rs  eval.rs  lib.rs  stream.rs  wire.rs
crates/syncode-lsp/: Cargo.toml
crates/syncode-lsp/src/: lang.rs  lib.rs
crates/syncode-sandbox/: Cargo.toml
crates/syncode-sandbox/src/: lib.rs
crates/syncode-tools/: Cargo.toml
crates/syncode-tools/src/: ast_edit.rs  ast_grep.rs  bash.rs  bash_output.rs  edit.rs  fsutil.rs  glob.rs  grep.rs  lib.rs  lsp.rs  read.rs  script.rs  subagent.rs  tests.rs  todo.rs  write.rs
crates/syncode-ui/: Cargo.toml
crates/syncode-ui/src/: main.rs
docs/: README.md
