# SynCode workspace.
# 设计依据见内部架构文档 (未公开): 纯 Rust core + 所有工具 Rust + 自建 agent loop + DeepSeek。
# 当前为「可编译骨架」: 结构 / 类型 / trait / stub 立起来, 实现随后填 (todo!())。
[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.0.0"
edition = "2024"
rust-version = "1.85"
license = "AGPL-3.0-only"
repository = ""

[workspace.dependencies]
# 第三方
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "time", "sync"] }
# reqwest: 保留默认 TLS (Windows 走 SChannel, 无需 C 编译器), 仅加 json + stream。
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
# 文件工具底层 (§5 第一梯队: 原子写 / 库化 ripgrep)。
tempfile = "3"
ignore = "0.4"
regex = "1"
# rusqlite bundled: 自带 SQLite C 源, 编进二进制 (单文件持久化, D2/D4 event-log/checkpoint)。
rusqlite = { version = "0.32", features = ["bundled"] }

# 内部 crate (路径依赖, 供成员用 { workspace = true } 引用)
syncode-llm = { path = "crates/syncode-llm" }
syncode-core = { path = "crates/syncode-core" }
syncode-tools = { path = "crates/syncode-tools" }
syncode-sandbox = { path = "crates/syncode-sandbox" }

[profile.dev]
# 骨架期默认即可。

[profile.release]
lto = "thin"
