[package]
name = "syncode-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "SynCode headless 任务驱动入口 (二进制 syncode)。"

[[bin]]
name = "syncode"
path = "src/main.rs"

[dependencies]
syncode-core = { workspace = true }
syncode-llm = { workspace = true }
syncode-tools = { workspace = true }
syncode-sandbox = { workspace = true }
tokio = { workspace = true }
