[package]
name = "syncode-sandbox"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "SynCode 安全/沙箱底座: 默认收紧、显式放开。Seatbelt(macOS) + landlock/seccomp(Linux) + Job Object(Windows) + cap-std 写收容。"

[dependencies]
thiserror = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

# Linux 深度沙箱后端 (landlock FS allowlist + seccomp 网络拒绝)。仅 Linux 编译/链接。
[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"
seccompiler = "0.4"
