[package]
name = "syncode-tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "SynCode 内置工具 (借鉴 CC 工具设计 IP, 用 Rust 重写, §10)。当前为 stub。"

[dependencies]
serde_json = { workspace = true }
async-trait = { workspace = true }
syncode-core = { workspace = true }
syncode-ast = { workspace = true }
syncode-lsp = { workspace = true }
tempfile = { workspace = true }
ignore = { workspace = true }
regex = { workspace = true }
# Lsp 工具用 tokio::time (诊断推送等待); 异步本身经 async-trait。
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
