# SynCode UI — gpui / gpui-component 验证 spike (架构 §9 / §12 待验证: gpui-component 在 Windows 的真实构建)。
# **自成独立 workspace** (与主 workspace 隔离): gpui 拉 Zed 单仓 git 依赖 (多 GB) + 巨依赖树, 不该污染主构建。
# 依赖 rev 必须**对齐** gpui-component 当前 pin 的 zed rev, 否则会编出两个互不兼容的 gpui crate。
[package]
name = "syncode-ui"
version = "0.0.0"
edition = "2024"
rust-version = "1.85"
publish = false

[workspace]

[dependencies]
anyhow = "1"
# zed rev 取自 gpui-component main 的 [workspace.dependencies] (2026-06 读取); 与 gpui-component 对齐。
gpui = { git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe" }
gpui_platform = { git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe", features = ["font-kit"] }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }

# SynCode agent 栈 (path 依赖主 workspace 的 crate); 跑真 agent loop + 流式事件。
syncode-core = { path = "../syncode-core" }
syncode-llm = { path = "../syncode-llm" }
syncode-tools = { path = "../syncode-tools" }
# agent worker 跑在独立 tokio runtime 线程; UI↔worker 用 smol channel (运行时无关, gpui executor 可 await)。
tokio = { version = "1", features = ["rt-multi-thread"] }
smol = "2"

# API key 安全存储 (设置面板把 DeepSeek key 写进系统钥匙串): macOS Keychain / Windows Credential
# Manager 原生后端, 无额外系统依赖。其它平台 (Linux) 暂回退为「不支持」(见 main.rs 的 keystore 模块)。
[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

# gpui 历史上需要 psm 的 git 版本 (栈管理); 沿用 gpui-component 的同款 patch。
[patch.crates-io]
psm = { git = "https://github.com/rust-lang/stacker", branch = "master" }
